@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Simplify libperl linking logic on Windows
 
 0.007     2024-06-18 20:39:07+02:00 Europe/Brussels
           - Use split_like_shell instead of shellwords
